--- a/content/resources/17-951s05-th.md
+++ b/content/resources/17-951s05-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: The Intelligence Cycle. (Image courtesy of the United States Intelligence
   Community.)
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-951-intelligence-practice-problems-and-prospects-spring-2005/8bff5bd9f7db87770cf29585efe734ac_17-951s05-th.jpg
+file: /media/courses/17-951-intelligence-practice-problems-and-prospects-spring-2005/8bff5bd9f7db87770cf29585efe734ac_17-951s05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Intelligence Cycle. (Image courtesy of the [United States Intelligence
@@ -11,8 +11,10 @@ image_metadata:
   image-alt: An illustration demonstrating the intelligence cycle.  Planning and Direction-->Dissemination-->Analysis
     and Production-->Processing and Exploitation-->Collection-->
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: The Intelligence Cycle (thumbnail)
 uid: 8bff5bd9-f7db-8777-0cf2-9585efe734ac
 ---
+The Intelligence Cycle. (Image courtesy of the United States Intelligence Community.)
